@@ -1,7 +1,9 @@
 Revision history for RPi-Const
 
 1.04 UNREL
-        -
+        - added constants for MCP23017 GPIO expander register locations
+          (mcp23017_registers tag) for upcoming RPi::GPIOExpander::MCP23017
+          release
 
 1.03    2018-05-29
         - added pwm_defaults tag, constants for default PWM settings
